Updated style to fix view on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
 
+@media (max-width: 768px) {
+    .text {
+        padding: 10%; /* Adjust the padding for smaller screens */
+    }
+}
+
 body {
     background-image: linear-gradient(to bottom, rgba(255, 168, 76, 0.6) 0%, rgba(255, 123, 13, 0.6) 100%), url('bamberg.jpg');
     background-size: cover; 
     background-repeat: no-repeat; 
+    background-attachment: fixed;
     position: fixed; 
     top: 0;
     right: 0;
